# agritechtz

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
agritechtz/: app.py  cache_config.py  constants.py  database.py  logger.py  models.py  repository.py  run.py  scheduler.py  security.py  settings.py  streamed_scrapper.py  utils.py  workers.py
agritechtz/api/common/: dependency.py
agritechtz/api/v1/: crops.py  schema.py
alembic/: README  env.py
alembic/versions/: d24b3fe6968a_create_cn_crop_prices_table.py
tests/: test_crop_prices_pdf_parser.py  test_paginator.py
